--- a/css/styles.css
+++ b/css/styles.css
@@ -142,6 +142,7 @@ Author URL: https://themeforest.net/user/codesymbol/
             main p {
                 margin-bottom: 25px;
                 letter-spacing: 1px;
+                text-align: center;
             }
             main a {
 
